--- a/html-folder/home.html
+++ b/html-folder/home.html
@@ -87,7 +87,7 @@
                     <img src="/img/bg-imges/Green Minimalist Watercolor Background Linkedin Banner1.png" alt="Slide 1" class="img-fluid">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/main1.png" alt="Slide 2" class="img-fluid">
+                    <img src="/img/bg-imges/Product Marketing Manager.png" alt="Slide 2" class="img-fluid">
                 </div>
                 <!-- Add more slides if needed -->
             </div>
@@ -672,15 +672,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 mb-4">
                     <div class="wrapper">
                         <i id="left" class="fa-solid fa-angle-left"></i>
                         <div class="slides">
+                            <img src="/img/hacathon-img/hackthon6.jpeg" alt="group-photo">
                             <img src="/img/hacathon-img/group-photo.jpeg" alt="group-photo">
-                            <img src="/img/hacathon-img/asar-team.jpeg" alt="group-photo">
+                            <img src="/img/hacathon-img/hackthon4.jpeg" alt="group-photo">
                             <img src="/img/hacathon-img/team-photo.jpeg" alt="group-photo">
                             <img src="/img/hacathon-img/hackathon.jpeg" alt="group-photo">
                             <img src="/img/hacathon-img/hackathon1.jpeg" alt="group-photo">
+                            <img src="/img/hacathon-img/hackathon2.jpeg" alt="group-photo">
+                            <img src="/img/hacathon-img/hackthon3.jpeg" alt="group-photo">
                         </div>
                         <i id="right" class="fa-solid fa-angle-right"></i>
                     </div>
@@ -819,7 +822,6 @@
 
 
     <!-- galary-section javascript section -->
-    <!-- <script src="/js-folder/galarySlide.js"></script> -->
 
     <script>
         const slide = document.querySelector(".slides"),
