--- a/html-folder/java.html
+++ b/html-folder/java.html
@@ -68,7 +68,7 @@
         </div>
     </section>
 
-    <section class="mt-5 mb-5">
+    <!-- <section class="mt-5 mb-5">
         <div class="container-fluid">
             <ul id="topnav">
                 <li>
@@ -103,34 +103,84 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section> -->
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h3 class="text-container">Java</h3>
-                <h4><b>Overview</b></h4>
-                <p>Java is a popular and widely used high-level programming language known for its portability, platform independence, 
-                    and versatility.Developed by James Gosling and his team at Sun Microsystems (later acquired by Oracle Corporation),
-                    Java was first released in 1995 and has since become one of the most prominent programming languages in the software
-                     development industry.</p>
-                <h4><b>Java Course</b></h4>
-                <p> <b>1.Introduction to Java:</b> An overview of Java, its history, features, and advantages over other programming languages.</p>  
-                <p> <b>2.Variables and Data Types:</b> Understanding how to define and manipulate variables, and the different data types available inJava.</p>
-                <p> <b>3.Control Flow Statements:</b> Learning how to use if-else, loops, and other control flow statements to control the flow of aprogram.</p>
-                <p> <b>4.Object-Oriented Programming:</b> Understanding the fundamentals of object-oriented programming in Java, including classes, objects, and inheritance.</p>
-                <p> <b>5.Methods:</b> Learning how to define and call methods in Java, as well as the concept of method parameters and return values.</p>
-                <p> <b>6.Arrays and Collections:</b> Understanding how to use arrays and collections to store and manipulate collections of data.</p>
-                <p> <b>7.File Handling:</b> Learning how to read from and write to files using Java.</p>
-                <p> <b>8.Exception Handling:</b> Understanding how to handle errors and exceptions in Java programs.</p>
-                <p> <b>9.Multithreading:</b> Learning how to implement multithreading in Java to handle time-consuming tasks and improve performance.</p>
-                <p> <b>10.Networking and I/O:</b> Understanding how to use Java's networking and I/O classes to communicate with other computers and devices over the network.</p>
-
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10 mt-5">
+                    <h2 class="mt-5 mb-3 text-primary" style="font-weight: bold;">Why Learn Java</h2>
+                    <p class="mb-3">
+                        learning Java is a valuable investment in your career as a software developer. Its widespread
+                        use, versatility, cross-platform compatibility, and strong community support make it an
+                        essential language for those entering the programming world or looking to advance their careers
+                        in the tech industry.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10 mb-3">
+                    <h5 class="mb-3" style="font-weight: bold;">Benefits</h5>
+                    <P class="mb-3">
+                        Most Java courses include hands-on coding exercises, quizzes, and projects to reinforce learning
+                        and provide practical experience. Additionally, some courses might cover advanced topics, such
+                        as Java Enterprise Edition (Java EE) for building web applications or other specialized Java
+                        libraries and frameworks based on the course's objectives.
+                    </P>
+                </div>
             </div>
         </div>
-         
+    </section>
 
-    </div>
+    <section>
+        <div class="container-fluid bg-light">
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-11 mt-4">
+                    <!-- <h3 class="text-container">Java</h3> -->
+                    <h4><b>Overview</b></h4>
+                    <p>Java is a popular and widely used high-level programming language known for its portability,
+                        platform
+                        independence,
+                        and versatility.Developed by James Gosling and his team at Sun Microsystems (later acquired by
+                        Oracle Corporation),
+                        Java was first released in 1995 and has since become one of the most prominent programming
+                        languages
+                        in the software
+                        development industry.</p>
+                    <h4><b>Java Course</b></h4>
+                    <p> <b>1.Introduction to Java:</b> An overview of Java, its history, features, and advantages over
+                        other
+                        programming languages.</p>
+                    <p> <b>2.Variables and Data Types:</b> Understanding how to define and manipulate variables, and the
+                        different data types available inJava.</p>
+                    <p> <b>3.Control Flow Statements:</b> Learning how to use if-else, loops, and other control flow
+                        statements to control the flow of aprogram.</p>
+                    <p> <b>4.Object-Oriented Programming:</b> Understanding the fundamentals of object-oriented
+                        programming
+                        in Java, including classes, objects, and inheritance.</p>
+                    <p> <b>5.Methods:</b> Learning how to define and call methods in Java, as well as the concept of
+                        method
+                        parameters and return values.</p>
+                    <p> <b>6.Arrays and Collections:</b> Understanding how to use arrays and collections to store and
+                        manipulate collections of data.</p>
+                    <p> <b>7.File Handling:</b> Learning how to read from and write to files using Java.</p>
+                    <p> <b>8.Exception Handling:</b> Understanding how to handle errors and exceptions in Java programs.
+                    </p>
+                    <p> <b>9.Multithreading:</b> Learning how to implement multithreading in Java to handle
+                        time-consuming
+                        tasks and improve performance.</p>
+                    <p> <b>10.Networking and I/O:</b> Understanding how to use Java's networking and I/O classes to
+                        communicate with other computers and devices over the network.</p>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <div class="container">
         <div class="row">
             <div class="col-lg-3">
@@ -190,8 +240,151 @@
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
-    <div class="container mb-5 mt-5" id="contact-form">
+
+
+    <section class="" style="background-color: #f5f5dc;">
+        <div class="Container">
+            <!-- <div class="row mb-3">
+                <div class="col-lg-5"></div>
+                <div class="col-lg-5">
+                  <h2 class="text-primary mt-4" style="font-weight: bold;"> AWS Course Syllabus</h2>
+                </div>
+              </div> -->
+            <div class="row">
+                <h2 class="text-primary text-center mb-4 mt-4" style="font-weight: bold;">Java Course Syllabus</h2>
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 mb-3">
+                    <button class="accordion">  Introduction to Java</button>
+                    <div class="panel">
+                        <ol>
+                            <li> Overview of Java and its features</li>
+                            <li> Installing Java Development Kit (JDK) and setting up the development environment </li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Basic Syntax and Data Types</button>
+                    <div class="panel">
+                        <ol>
+                            <li> Variables and data types (integers, floating-point numbers, strings, etc.) </li>
+                            <li> Operators (arithmetic, relational, logical) </li>
+                            <li>Input and output (using Scanner and System.out)</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Control Flow and Loops</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Conditional statements (if, else, switch) </li>
+                            <li> Looping structures (for, while, do-while)</li>
+                            <li> Break and continue statements</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Object-Oriented Programming (OOP)</button>
+                    <div class="panel">
+                        <ol>
+                            <li> Classes and objects</li>
+                            <li> Constructors and methods</li>
+                            <li>Inheritance, polymorphism, and encapsulation</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Arrays and Collections</button>
+                    <div class="panel">
+                        <ol>
+                            <li> Working with arrays (single-dimensional and multi-dimensional)</li>
+                            <li>Introduction to Java Collections Framework (List, Set, Map) </li>
+                        </ol>
+                    </div>
+                   <button class="accordion">Exception Handling</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Handling runtime exceptions using try-catch blocks</li>
+                            <li>Throwing and creating custom exceptions</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">File I/O</button>
+                    <div class="panel">
+                        <ol>
+                            <li> Reading from and writing to files using FileReader, FileWriter, etc.</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Interfaces and Abstract Classes</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Understanding interfaces and abstract classes</li>
+                            <li>Implementing interfaces and extending abstract classes</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Multithreading and Concurrency</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Basics of multithreading in Java</li>
+                            <li>Synchronization and thread safety</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Java Standard Library (Java API)</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Overview of commonly used classes and methods in the Java API</li>
+                            <li>Exploring utility classes in packages like java.lang, java.util, etc. </li>
+                        </ol>
+                    </div>         
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-dark">
+        <div class="row text-white fade-up-text">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-3 mt-5 mb-5">
+                <div class="">
+                    <img src="/img/logo.svg" alt="technohub">
+                    <!-- <h5>Hello, this is the fading text!</h5> -->
+                </div>
+            </div>
+            <div class="col-lg-3 mt-5 mb-5">
+                <div class="">
+                    <h4>Site Map</h4>
+                    <ul id="site-map" style="list-style-type:none; margin: 0; padding: 0;">
+                        <li> <a href="#"> Home </a> </li>
+                        <li> <a href="#"> About us </a> </li>
+                        <li> <a href="#"> Contact us </a> </li>
+                        <li> <a href="#"> googleMap </a> </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-4 mt-5 mb-5">
+                <div class="">
+                    <h4> Address</h4>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/marker.svg" alt="marker">
+                        </div>
+                        <p>
+                            1st floor, 80 Feet Rd, opposite Canara Bank,<br> MET Layout, Ashwath Nagar, <br>Sanjaynagar,
+                            Bengaluru-94.
+                        </p>
+                    </div>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/phone.svg" alt="phone">
+                        </div>
+                        <p>
+                            9849175588
+                        </p>
+                    </div>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/mail.svg" alt="mail">
+                        </div>
+                        <p>
+                            shameer@technohubtrainings.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- <div class="container mb-5 mt-5" id="contact-form">
         <form>
             <h4 class="mt-4 mb-5" style="text-align: center;">Request More Information</h4>
             <div class="row">
@@ -217,7 +410,7 @@
                     onclick="sendEmail(); reset(); return false">submit</button>
             </div>
         </form>
-    </div>
+    </div> -->
 
     <!-- Add custom JavaScript -->
     <script>
@@ -230,18 +423,25 @@
         }
     </script>
 
+    <!-- accordian section javascript -->
+
+    <script src="/js-folder/accordian.js"></script>
+
+    <!-- footer section javascript -->
+    <script src="/js-folder/fadeup.js"></script>
+
     <!-- chatbot integration code  -->
-  <script type="text/javascript">
-    (function (d, m) {
-      var kommunicateSettings =
-        { "appId": "2f0e5b356f1971a9e9a576200fd6eda9b", "popupWidget": true, "automaticChatOpenOnNavigation": true };
-      var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-      s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-      var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-      window.kommunicate = m; m._globals = kommunicateSettings;
-    })(document, window.kommunicate || {});
+    <script type="text/javascript">
+        (function (d, m) {
+            var kommunicateSettings =
+                { "appId": "2f0e5b356f1971a9e9a576200fd6eda9b", "popupWidget": true, "automaticChatOpenOnNavigation": true };
+            var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+            s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+            var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+            window.kommunicate = m; m._globals = kommunicateSettings;
+        })(document, window.kommunicate || {});
 /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-  </script>
+    </script>
 
 </body>
 
