adding new pages

--- a/html-folder/fullstack.html
+++ b/html-folder/fullstack.html
@@ -57,12 +57,12 @@
                                 <a class="dropdown-item" href="testing.html">Testing</a>
                                 <a class="dropdown-item" href="sql.html">SQL</a>
                                 <a class="dropdown-item" href="android.html">Android</a>
+                                <a class="dropdown-item" href="GitHub.html">GitHub</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
-                                <a class="dropdown-item" href="devops.html">Cybersecurity</a>
-                                <a class="dropdown-item" href="devops.html">Microsoft</a>
-                                <a class="dropdown-item" href="devops.html">Azure</a>
-                                <a class="dropdown-item" href="devops.html">power BI</a>
-                                <a class="dropdown-item" href="devops.html">GitHub</a>
+                                <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
+                                <a class="dropdown-item" href="microsoft.html">Microsoft</a>
+                                <a class="dropdown-item" href="azure.html">Azure</a>
+                                <a class="dropdown-item" href="powerbi.html">power BI</a>   
                             </div>
                         </li>
                         <!-- <li class="nav-item">
@@ -203,33 +203,58 @@
     </section>
 
     
-    <div class="container mb-5 mt-5" id="contact-form">
-        <form>
-            <h4 class="mt-4 mb-5" style="text-align: center;">Request More Information</h4>
-            <div class="row">
-                <div class="col-lg-6" id="contact-input">
-                    <input type="text" class="form-control" name="name" id="p1" placeholder="Name" />
-                    <input type="text" class="form-control" name="phone" id="p2" placeholder="Phone" />
-                    <input type="text" class="form-control" name="city" id="p3" placeholder="City (optional)" />
-                    <textarea name="textarea" class="form-control"
-                        placeholder="Enter Query\ Your Requirement :"></textarea>
+    <footer class="bg-dark">
+        <div class="row text-white" style="margin-left: 30px;">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-3 mt-4">
+                <div class="">
+                    <img src="/img/logo.svg" alt="technohub">
+                    <!-- <h5>Hello, this is the fading text!</h5> -->
                 </div>
-                <div class="col-lg-6" id="contact-input">
-                    <input type="email" class="form-control" name="email" id="p4" placeholder="Email" />
-                    <input type="text" class="form-control" name="contry" id="p5" placeholder="India" />
-                    <input type="checkbox" /> <label class="request"> Request a call back ?</label> <br>
-                    <div class="captcha">
-                        <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
-                            data-callback="onRecaptchaSuccess" data-expired-callback="onRecaptchaResponseExpiry"
-                            data-error-callback="onRecaptchaError">
+            </div>
+            <div class="col-lg-3 mt-4">
+                <div class="">
+                    <h4>Site Map</h4>
+                    <ul id="site-map" style="list-style-type:none; margin: 0; padding: 0;">
+                        <li> <a href="#"> Home </a> </li>
+                        <li> <a href="#"> About us </a> </li>
+                        <li> <a href="#"> Contact us </a> </li>
+                        <li> <a href="#"> googleMap </a> </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-4 mt-4">
+                <div class="">
+                    <h4> Address</h4>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/marker.svg" alt="marker">
                         </div>
+                        <p>
+                            1st floor, 80 Feet Rd, opposite Canara Bank,<br> MET Layout, Ashwath Nagar, <br>Sanjaynagar,
+                            Bengaluru-94.
+                        </p>
+                    </div>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/phone.svg" alt="phone">
+                        </div>
+                        <p>
+                            9849175588
+                        </p>
+                    </div>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/mail.svg" alt="mail">
+                        </div>
+                        <p>
+                            shameer@technohubtrainings.com
+                        </p>
                     </div>
                 </div>
-                <button id="submit-btn" class="btn btn-danger"
-                    onclick="sendEmail(); reset(); return false">submit</button>
             </div>
-        </form>
-    </div>
+        </div>
+    </footer>
 
     <!-- Add custom JavaScript -->
     <script>
