--- a/html-folder/uidevelopement.html
+++ b/html-folder/uidevelopement.html
@@ -58,12 +58,12 @@
                                 <a class="dropdown-item" href="testing.html">Testing</a>
                                 <a class="dropdown-item" href="sql.html">SQL</a>
                                 <a class="dropdown-item" href="android.html">Android</a>
+                                <a class="dropdown-item" href="GitHub.html">GitHub</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
-                                <a class="dropdown-item" href="devops.html">Cybersecurity</a>
-                                <a class="dropdown-item" href="devops.html">Microsoft</a>
-                                <a class="dropdown-item" href="devops.html">Azure</a>
-                                <a class="dropdown-item" href="devops.html">power BI</a>
-                                <a class="dropdown-item" href="devops.html">GitHub</a>
+                                <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
+                                <a class="dropdown-item" href="microsoft.html">Microsoft</a>
+                                <a class="dropdown-item" href="azure.html">Azure</a>
+                                <a class="dropdown-item" href="powerbi.html">power BI</a>   
                             </div>
                         </li>
                         <!-- <li class="nav-item">
