--- a/html-folder/contact.html
+++ b/html-folder/contact.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <section class="container-fluid bg-light">
+    <section class="container-fluid bg-light" style="font-weight: bold; color: black;">
         <div class="container text-center"> <!-- Center the navigation bar -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">
@@ -56,19 +56,19 @@
                                 <a class="dropdown-item" href="testing.html">Testing</a>
                                 <a class="dropdown-item" href="sql.html">SQL</a>
                                 <a class="dropdown-item" href="android.html">Android</a>
+                                <a class="dropdown-item" href="GitHub.html">GitHub</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
-                                <a class="dropdown-item" href="devops.html">Cybersecurity</a>
-                                <a class="dropdown-item" href="devops.html">Microsoft</a>
-                                <a class="dropdown-item" href="devops.html">Azure</a>
-                                <a class="dropdown-item" href="devops.html">power BI</a>
-                                <a class="dropdown-item" href="devops.html">GitHub</a>
+                                <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
+                                <a class="dropdown-item" href="microsoft.html">Microsoft</a>
+                                <a class="dropdown-item" href="azure.html">Azure</a>
+                                <a class="dropdown-item" href="powerbi.html">power BI</a>   
                             </div>
                         </li>
                         <!-- <li class="nav-item">
-                            <a class="nav-link" href="testing.html">Testing</a>
+                            <a class="nav-link" href="index.html">Testing</a>
                         </li> -->
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Contact US</a>
+                            <a class="nav-link" href="contact.html">Contact US</a>
                         </li>
                     </ul>
                 </div>
@@ -203,17 +203,18 @@
     </section>
 
     <footer class="bg-dark">
-        <div class="row text-white fade-up-text">
-            <div class="col-lg-4 mt-5 mb-5 text-center">
+        <div class="row text-white" style="margin-left: 30px;">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-3 mt-4">
                 <div class="">
                     <img src="/img/logo.svg" alt="technohub">
                     <!-- <h5>Hello, this is the fading text!</h5> -->
                 </div>
             </div>
-            <div class="col-lg-3 mt-5 mb-5">
+            <div class="col-lg-3 mt-4">
                 <div class="">
                     <h4>Site Map</h4>
-                    <ul id="site-map" >
+                    <ul id="site-map" style="list-style-type:none; margin: 0; padding: 0;">
                         <li> <a href="#"> Home </a> </li>
                         <li> <a href="#"> About us </a> </li>
                         <li> <a href="#"> Contact us </a> </li>
@@ -221,7 +222,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4 mt-5 mb-5">
+            <div class="col-lg-4 mt-4">
                 <div class="">
                     <h4> Address</h4>
                     <div class="each-line">
