--- a/html-folder/home.html
+++ b/html-folder/home.html
@@ -61,12 +61,12 @@
                                 <a class="dropdown-item" href="testing.html">Testing</a>
                                 <a class="dropdown-item" href="sql.html">SQL</a>
                                 <a class="dropdown-item" href="android.html">Android</a>
+                                <a class="dropdown-item" href="GitHub.html">GitHub</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
-                                <a class="dropdown-item" href="devops.html">Cybersecurity</a>
-                                <a class="dropdown-item" href="devops.html">Microsoft</a>
-                                <a class="dropdown-item" href="devops.html">Azure</a>
-                                <a class="dropdown-item" href="devops.html">power BI</a>
-                                <a class="dropdown-item" href="devops.html">GitHub</a>
+                                <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
+                                <a class="dropdown-item" href="microsoft.html">Microsoft</a>
+                                <a class="dropdown-item" href="azure.html">Azure</a>
+                                <a class="dropdown-item" href="powerbi.html">power BI</a>   
                             </div>
                         </li>
                         <!-- <li class="nav-item">
@@ -94,8 +94,7 @@
             <!-- Slides -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/bg-imges/Green Minimalist Watercolor Background Linkedin Banner1.png" alt="Slide 1"
-                        class="img-fluid">
+                    <img src="/img/main2.jpg" alt="Slide 1" class="img-fluid">
                 </div>
                 <div class="carousel-item">
                     <img src="/img/bg-imges/Product Marketing Manager.png" alt="Slide 2" class="img-fluid">
@@ -374,7 +373,7 @@
                         <div class="trainer">
                             <div class="icon">
                                 <br>
-                                <img src="/img/Classroom.png" alt="Classroom">
+                                <img src="/img/classroom.png" alt="Classroom">
                             </div>
                             <div>
                                 <h4>Experienced Trainers</h4>
@@ -462,7 +461,7 @@
         <div class="container text-center mt-3 mb-5">
             <div class="row mt-3 mb-3">
                 <div class="col-md-12 col-12">
-                    <h3 style="font-weight: bold; color:white;"> Our UpComing Courses</h3>
+                    <h3 style="font-weight: bold; color:white;"> Our Courses</h3>
                 </div>
             </div>
             <div class="row">
@@ -533,16 +532,16 @@
         </div>
     </section>
 
-    <footer class="mt-5 bg-dark">
-        <div class="row text-white fade-up-text">
+    <footer class="bg-dark">
+        <div class="row text-white" style="margin-left: 30px;">
             <div class="col-lg-1"></div>
-            <div class="col-lg-3 mt-5 mb-5">
+            <div class="col-lg-3 mt-4">
                 <div class="">
                     <img src="/img/logo.svg" alt="technohub">
                     <!-- <h5>Hello, this is the fading text!</h5> -->
                 </div>
             </div>
-            <div class="col-lg-3 mt-5 mb-5">
+            <div class="col-lg-3 mt-4">
                 <div class="">
                     <h4>Site Map</h4>
                     <ul id="site-map" style="list-style-type:none; margin: 0; padding: 0;">
@@ -553,7 +552,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4 mt-5 mb-5">
+            <div class="col-lg-4 mt-4">
                 <div class="">
                     <h4> Address</h4>
                     <div class="each-line">
@@ -585,8 +584,6 @@
             </div>
         </div>
     </footer>
-
-
 
     <!-- Add Bootstrap JS and jQuery (required for dropdown functionality) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -621,12 +618,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
-
-
-
-
-
 
 </body>
 
