--- a/html-folder/python.html
+++ b/html-folder/python.html
@@ -39,7 +39,7 @@
     <section>
         <div class="d-flex justify-content-around" id="enquery-sec">
             <div>
-                <label for=""> New Course Enquery : +918247023831</label>
+                <label for=""> New Course Enquery : +916363086929</label>
             </div>
             <div>
                 <label for=""> E-mail : info@technohubtrainings.com</label>
@@ -49,7 +49,7 @@
 
     <section class="container-fluid bg-light" style="font-weight: bold; color: black;">
         <div class="container text-center"> <!-- Center the navigation bar -->
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">
                     <img src="/img/technohub.jpg" alt="technohub" width="100%" height="80px">
                 </a>
@@ -76,12 +76,12 @@
                                 <a class="dropdown-item" href="testing.html">Testing</a>
                                 <a class="dropdown-item" href="sql.html">SQL</a>
                                 <a class="dropdown-item" href="android.html">Android</a>
+                                <a class="dropdown-item" href="GitHub.html">GitHub</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
-                                <a class="dropdown-item" href="devops.html">Cybersecurity</a>
-                                <a class="dropdown-item" href="devops.html">Microsoft</a>
-                                <a class="dropdown-item" href="devops.html">Azure</a>
-                                <a class="dropdown-item" href="devops.html">power BI</a>
-                                <a class="dropdown-item" href="devops.html">GitHub</a>
+                                <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
+                                <a class="dropdown-item" href="microsoft.html">Microsoft</a>
+                                <a class="dropdown-item" href="azure.html">Azure</a>
+                                <a class="dropdown-item" href="powerbi.html">power BI</a>   
                             </div>
                         </li>
                         <!-- <li class="nav-item">
@@ -90,12 +90,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact US</a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <span> <input type="text" name="search" placeholder="what do you want learn?"
-                                    required="required" /></span>
-                            <span> <input class="btn btn-primary" id="start-search" type="submit" value="Search" />
-                            </span>
-                        </li> -->
                     </ul>
                 </div>
             </nav>
@@ -106,29 +100,13 @@
         <div class="container-fluid">
             <img src="/img/python.png" alt="" class="img-fluid" width="100%">
         </div>
-        <!-- <div class="container-fluid text-white">
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-6 mt-5">
-                    <h4 class="mt-5"><b>Overview</b></h4>
-                    <p>Python is a high-level, interpreted, and general-purpose programming language known for its
-                        simplicity, readability,
-                        and versatility. Created by Guido van Rossum and first released in 1991, Python has gained
-                        immense popularity over
-                        the years and has become one of the most widely used programming languages across various
-                        domains, including web
-                        development, data analysis, artificial intelligence, scientific computing, and automation.
-                    </p>
-                </div>
-            </div>
-        </div> -->
     </section>
 
     <section>
         <div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-lg-1"></div>
-                <div class="col-lg-10 mb-3" id="search-homepage">
+                <div class="col-lg-10 " id="search-homepage">
                     <div class="" id="search-span">
                         <form id="searchForm">
                             <div class="search-form">
@@ -144,20 +122,19 @@
         </div>
     </section>
 
-
     <section>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row mt-4">
                 <div class="col-lg-1"></div>
-                <div class="col-lg-7">
-                    <h2 class="mt-5 mb-3 text-primary" style="font-weight: bold;">Why Learn Python</h2>
+                <div class="col-lg-7 mt-3">
+                    <h2 class="mb-3 text-primary" style="font-weight: bold;">Why Learn Python</h2>
                     <p class="mb-3">
                         learning Python can be a valuable investment in your future, whether you're a beginner or an
                         experienced programmer. Its versatility, simplicity, and strong community support make it an
                         excellent choice for various applications and a great language to have in your skillset.
                     </p>
                     <h5 class="mb-3" style="font-weight: bold;">Benefits</h5>
-                    <P class="mb-5">
+                    <P class="mb-3">
                         Python course can equip you with valuable skills that are highly relevant in today's
                         technology-driven world. Whether you are a complete beginner or an experienced programmer,
                         learning Python can benefit you in numerous ways and give you a competitive edge in your career.
@@ -239,11 +216,11 @@
         <div class="container">
             <div class="row mt-3 mb-3">
                 <div class="col-lg-12 text-center">
-                    <h2 class="text-primary mt-4">Why enroll for Python Certification Course?</h2>
+                    <h3 class="text-primary mt-4">Why enroll for Python Certification Course?</h3>
                 </div>
             </div>
             <div class="row mb-4">
-                <div class="col-lg-4 mb-5">
+                <div class="col-lg-4 mb-2">
                     <div class="why-enroll">
                         <div class="mt-2 text-center">
                             <img src="/img/box_traning_1.webp" class="mt-3" alt="box_traning_3" width="50px">
@@ -258,7 +235,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-5">
+                <div class="col-lg-4 mb-2">
                     <div class="why-enroll">
                         <div class="mt-2 text-center">
                             <!-- <img src="/img/clients.png" alt="clipboard-check" id="clipboard"> -->
@@ -273,7 +250,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-4">
+                <div class="col-lg-4 mb-2">
                     <div class="why-enroll">
                         <div class="mt-2 text-center">
                             <!-- <img src="/img/clients.png" alt="clipboard-check" id="clipboard"> -->
@@ -321,7 +298,7 @@
                         <p class="it-software"> Job & Placements</p>
                         <i class="fa-solid fa-person-circle-check" aria-hidden="true" style='font-size:60px;color:rgb(0, 162, 255)'></i>
                         <!-- <i class="fa fa-building" aria-hidden="true" style='font-size:60px;color:rgb(0, 162, 255)'></i> -->
-                        <p class="text-center m-2" style="font-weight: 500;">100% Placements</p>
+                        <p class="text-center m-2" style="font-weight: 500;">99% Placements</p>
                     </div>
                 </div>
             </div>
@@ -331,7 +308,7 @@
     <section class="" style="background-color: #c5eded;">
         <div class="Container">
             <div class="row">
-                <h2 class="text-primary text-center mb-4 mt-4" style="font-weight: bold;">Python Course Syllabus</h2>
+                <h3 class="text-primary text-center mb-4 mt-4" style="font-weight: bold;">Python Course Syllabus</h3>
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 mb-5">
                     <button class="accordion"> Introduction to Python</button>
@@ -414,15 +391,15 @@
     </section>
 
     <footer class="bg-dark">
-        <div class="row text-white fade-up-text">
+        <div class="row text-white" style="margin-left: 30px;">
             <div class="col-lg-1"></div>
-            <div class="col-lg-3 mt-5 mb-5">
+            <div class="col-lg-3 mt-4">
                 <div class="">
                     <img src="/img/logo.svg" alt="technohub">
                     <!-- <h5>Hello, this is the fading text!</h5> -->
                 </div>
             </div>
-            <div class="col-lg-3 mt-5 mb-5">
+            <div class="col-lg-3 mt-4">
                 <div class="">
                     <h4>Site Map</h4>
                     <ul id="site-map" style="list-style-type:none; margin: 0; padding: 0;">
@@ -433,7 +410,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4 mt-5 mb-5">
+            <div class="col-lg-4 mt-4">
                 <div class="">
                     <h4> Address</h4>
                     <div class="each-line">
