--- a/searching.html
+++ b/searching.html
@@ -1,79 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Slider</title>
-    <link rel="stylesheet" href="styles.css">
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .slider-container {
-            max-width: 800px;
-            margin: 0 auto;
-            overflow: hidden;
-        }
-
-        .slider {
-            display: flex;
-            transition: transform 0.3s ease;
-        }
-
-        img {
-            width: 100%;
-            height: auto;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bootstrap Navigation Bar with Spaced Dropdown on Mouse Hover</title>
+  <!-- Add Bootstrap CSS link -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <!-- Add custom CSS -->
+  <style>
+    .navbar .dropdown:hover .dropdown-menu {
+      display: block;
+    }
+    .navbar {
+        display: flex;
+      justify-content: space-around;
+      /* padding: 10px 20px; Add some space around the navigation bar */
+    }
+  </style>
 </head>
-
 <body>
-    <div class="slider-container">
-        <div class="slider">
-            <img src="/img/learning5.webp" alt="Image 1">
-            <img src="/img/API-security.jpeg" alt="Image 2">
-            <img src="/img/learning6.png" alt="Image 3">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Your Logo</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
         </div>
-    </div>
-    <script src="script.js"></script>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-    <script>
-        const slider = document.querySelector('.slider');
-        let slideIndex = 0;
-
-        function showSlide(index) {
-            const slides = document.querySelectorAll('.slider img');
-            if (index < 0) {
-                slideIndex = slides.length - 1;
-            } else if (index >= slides.length) {
-                slideIndex = 0;
-            }
-            slider.style.transform = `translateX(-${slideIndex * 100}%)`;
-        }
-
-        function nextSlide() {
-            slideIndex++;
-            showSlide(slideIndex);
-        }
-
-        function prevSlide() {
-            slideIndex--;
-            showSlide(slideIndex);
-        }
-
-        // Automatic slide change every 5 seconds (optional)
-        setInterval(nextSlide, 5000);
-
-        // Show the initial slide
-        showSlide(slideIndex);
-
-    </script>
+<!-- Add Bootstrap JS and jQuery (required for dropdown functionality) -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
-
 </html>
