new changes in website

--- a/html-folder/home.html
+++ b/html-folder/home.html
@@ -9,34 +9,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css-folder/home.css"> <!-- Custom CSS for centering the navigation bar -->
 
+
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
-    <!-- searching options js link -->
-    <!-- <script src="/js-folder/search_opt.js"></script> -->
+
 </head>
 
 <body>
-    <section class="container-fluid bg-light" style="font-weight: 600; color: black;">
+    <section class="container-fluid bg-light" style="font-weight: bold; color: black;">
         <div class="container text-center"> <!-- Center the navigation bar -->
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/technohub.jpg" alt="technohub" width="100%" height="80px">
+                    <img src="/img/technohub.jpg" alt="technohub" id="technohub-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto"> <!-- mx-auto class to center the items -->
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -58,28 +48,35 @@
                                 <a class="dropdown-item" href="react.html">ReactJS</a>
                                 <a class="dropdown-item" href="nodejs.html">Node.JS</a>
                                 <a class="dropdown-item" href="angular.html">Angular.JS</a>
-                                <a class="dropdown-item" href="testing.html">Testing</a>
+                                <a class="dropdown-item" href="testing.html">Software Testing</a>
                                 <a class="dropdown-item" href="sql.html">SQL</a>
-                                <a class="dropdown-item" href="android.html">Android</a>
+                                <a class="dropdown-item" href="android.html">Android development</a>
                                 <a class="dropdown-item" href="GitHub.html">GitHub</a>
+                                <a class="dropdown-item" href="iconicHybrid.html">Iconic Hybrid</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
                                 <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
-                                <a class="dropdown-item" href="microsoft.html">Microsoft</a>
-                                <a class="dropdown-item" href="azure.html">Azure</a>
-                                <a class="dropdown-item" href="powerbi.html">power BI</a>   
+                                <a class="dropdown-item" href="microsoftpower.html">Microsoft Power</a>
+                                <a class="dropdown-item" href="microsoftazure.html">Microsoft Azure</a>
+                                <a class="dropdown-item" href="microsoftdatafundamental.html">Microsoft Data
+                                    Fundamentals</a>
+                                <a class="dropdown-item" href="microsoftInfrastructure.html">Microsoft
+                                    Infrastructure</a>
+                                <a class="dropdown-item" href="powerbi.html">power BI</a>
                             </div>
                         </li>
                         <!-- <li class="nav-item">
-                            <a class="nav-link" href="testing.html">Testing</a>
+                            <a class="nav-link" href="index.html">Testing</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact US</a>
+                            <a class="nav-link" href="contact.html">Contact US</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
     </section>
+
+
 
     <section style="background-color:rgb(241,241,241);">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -216,8 +213,8 @@
         <div class="container mt-4">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="mt-4 mb-4 text-primary text-center" style="font-weight: bold;"> Why Training Courses from
-                        Technohub</h2>
+                    <h3 class="mt-4 mb-4 text-primary text-center" style="font-weight: bold;"> Why Training Courses from
+                        Technohub</h3>
                 </div>
             </div>
             <div class="row">
@@ -236,7 +233,7 @@
                             <ol style="list-style-type:disc;">
                                 <li> World class Instructor</li>
                                 <li> Expert-led mentoring sessions</li>
-                                <li> Instant dobut clearing</li>
+                                <li> Instant doubts clearing</li>
                             </ol>
                         </div>
                     </div>
@@ -332,8 +329,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="text-center text-dark mt-5" style="font-weight: bold;"> Learining Options
-                    </h2>
+                    <h3 class="text-center text-dark mt-5" style="font-weight: bold;"> Learining Options</h3>
                 </div>
             </div>
             <div class="row mt-4 mb-5">
@@ -341,7 +337,7 @@
                     <img src="/img/training1.webp" width="100%"
                         class="img-fluid img-responsive center-block d-block mx-auto mt-2"
                         style="box-shadow: 0px 0px 5px;  height: 30vh;" />
-                    <h5 class="text-center text-white mt-4 p-3" style="background-color: rgb(0, 153, 255);"> On-Premise
+                    <h5 class="mt-4" id="learn-opt-heading" style="background-color: rgb(0, 153, 255);"> On-Premise
                         Classroom
                         Training</h5>
                 </div>
@@ -349,14 +345,14 @@
                     <img src="/img/learning5.webp" width="100%"
                         class="img-fluid img-responsive center-block d-block mx-auto mt-2"
                         style="box-shadow: 0px 0px 5px;  height: 30vh;" />
-                    <h5 class="text-center text-white mt-4 p-3" style="background-color: rgb(0, 153, 255);">
+                    <h5 class="mt-4" id="learn-opt-heading" style="background-color: rgb(0, 153, 255);">
                         Instructor-Led
                         Live,Online Training</h5>
                 </div>
                 <div class="col-lg-4">
                     <img src="/img/learning6.png" width="100%" class=" mt-2"
                         style="box-shadow: 0px 0px 5px; height: 30vh;" />
-                    <h5 class="text-center text-white mt-4 p-3" style="background-color: rgb(0, 153, 255);"> Self-Paced
+                    <h5 class="mt-4" id="learn-opt-heading" style="background-color: rgb(0, 153, 255);"> Self-Paced
                         online
                         Training</h5>
                 </div>
@@ -368,14 +364,13 @@
     <section class="bg-light">
         <div class="container" id="trainer-section">
             <div class="row">
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 mb-3 ">
                     <div class="exp-trainer">
                         <div class="trainer">
                             <div class="icon">
-                                <br>
                                 <img src="/img/classroom.png" alt="Classroom">
                             </div>
-                            <div>
+                            <div class="text-center">
                                 <h4>Experienced Trainers</h4>
                                 <p>
                                     We have experienced trainers with real-time experience, use many formats and
@@ -387,39 +382,36 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 text-center ">
+                <div class="col-lg-4 mb-3 ">
                     <div class="exp-trainer">
                         <div class="trainer">
                             <div class="icon">
-                                <br>
                                 <img src="/img/certificate.png" alt="certificate">
                             </div>
-                            <div>
+                            <div class="text-center">
                                 <h4>Certification</h4>
                                 <p>
-                                    We have experienced trainers with real-time experience, use many formats and
-                                    platforms
-                                    to ensure the right content is available in the best format to ensure effective
-                                    knowledge/ skills transfer.
+                                    Unlock your potential with our comprehensive course certification. Gain valuable
+                                    skills and knowledge through expert-led training. Boost your career prospects and
+                                    join a community of successful graduates.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 mb-3">
                     <div class="exp-trainer">
                         <div class="trainer">
                             <div class="icon">
-                                <br>
+
                                 <img src="/img/job-support.png" alt="job-support">
                             </div>
                             <div class="text-center">
                                 <h4>Job Support</h4>
                                 <p>
-                                    We have experienced trainers with real-time experience, use many formats and
-                                    platforms
-                                    to ensure the right content is available in the best format to ensure effective
-                                    knowledge/ skills transfer.
+                                    Get the job support you need to excel in your career. Our expert team is here to
+                                    guide you through challenges, offer valuable advice, and help you achieve success in
+                                    your professional journey.
                                 </p>
                             </div>
                         </div>
@@ -447,7 +439,7 @@
                             <img src="/img/hacathon-img/team-photo.jpeg" alt="group-photo">
                             <img src="/img/hacathon-img/hackathon.jpeg" alt="group-photo">
                             <img src="/img/hacathon-img/hackathon1.jpeg" alt="group-photo">
-                            <img src="/img/hacathon-img/hackathon2.jpeg" alt="group-photo">
+                            <!-- <img src="/img/hacathon-img/hackathon2.jpeg" alt="group-photo"> -->
                             <img src="/img/hacathon-img/hackthon3.jpeg" alt="group-photo">
                         </div>
                         <i id="right" class="fa-solid fa-angle-right"></i>
@@ -528,6 +520,14 @@
                         </form>
                     </div>
                 </div>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-6 mt-3 mb-3">
+                    <h4 class="text-primary"> Office location</h4>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.1389727982096!2d77.57674171086957!3d13.026820813611725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae17bbe308bc23%3A0x914d4d95aac2da1!2sTechnohub%20Trainings!5e0!3m2!1sen!2sin!4v1691157585576!5m2!1sen!2sin"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
     </section>
@@ -560,7 +560,7 @@
                             <img src="/img/marker.svg" alt="marker">
                         </div>
                         <p>
-                            1st floor, 80 Feet Rd, opposite Canara Bank,<br> MET Layout, Ashwath Nagar, <br>Sanjaynagar,
+                            #131A, 1st floor, 80 Feet Rd, RMV 2nd stage <br> MET Layout, Ashwath Nagar, <br>Sanjaynagar,
                             Bengaluru-94.
                         </p>
                     </div>
@@ -585,39 +585,25 @@
         </div>
     </footer>
 
-    <!-- Add Bootstrap JS and jQuery (required for dropdown functionality) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-
-
-    <!-- fade-up-text -->
-    <script src="/js-folder/fadeup.js"></script>
-
-    <!-- galary-section javascript -->
-    <script src="/js-folder/galarySlide.js"></script>
-
-    <!-- dropdown section javascript -->
+    <!-- navbar dropdown folder javascript -->
     <script src="/js-folder/dropdown.js"></script>
+
+    <!-- accordian section javascript -->
+    <script src="/js-folder/accordian.js"></script>
+
+    <!-- footer section javascript -->
+    <script src="/js-folder/fadeup.js"></script>
 
     <!-- chatbot integration code  -->
     <script src="/js-folder/chatbot.js"></script>
 
-    <!-- searching section javascript -->
+    <!-- course search option javascript -->
     <script src="/js-folder/search_opt.js"></script>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <!-- galary-section javascript -->
+    <script src="/js-folder/galarySlide.js"></script>
+
 
 </body>
 
