--- a/html-folder/contact.html
+++ b/html-folder/contact.html
@@ -8,20 +8,17 @@
     
     <!-- Add Bootstrap CSS link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css-folder/home.css"> <!-- Custom CSS for centering the navigation bar -->
-    <!-- Add Bootstrap CSS link -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
     <link rel="stylesheet" href="/css-folder/contact.css">
+    <link rel="stylesheet" href="/css-folder/home.css">
 
     <script src="/js-folder/formvalidation.js"></script>
 </head>
@@ -31,7 +28,7 @@
         <div class="container text-center"> <!-- Center the navigation bar -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/technohub.jpg" alt="technohub" width="100%" height="80px">
+                    <img src="/img/technohub.jpg" alt="technohub" id="technohub-logo"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,15 +50,20 @@
                                 <a class="dropdown-item" href="react.html">ReactJS</a>
                                 <a class="dropdown-item" href="nodejs.html">Node.JS</a>
                                 <a class="dropdown-item" href="angular.html">Angular.JS</a>
-                                <a class="dropdown-item" href="testing.html">Testing</a>
+                                <a class="dropdown-item" href="testing.html">Software Testing</a>
                                 <a class="dropdown-item" href="sql.html">SQL</a>
-                                <a class="dropdown-item" href="android.html">Android</a>
+                                <a class="dropdown-item" href="android.html">Android development</a>
                                 <a class="dropdown-item" href="GitHub.html">GitHub</a>
+                                <a class="dropdown-item" href="iconicHybrid.html">Iconic Hybrid</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
                                 <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
-                                <a class="dropdown-item" href="microsoft.html">Microsoft</a>
-                                <a class="dropdown-item" href="azure.html">Azure</a>
-                                <a class="dropdown-item" href="powerbi.html">power BI</a>   
+                                <a class="dropdown-item" href="microsoftpower.html">Microsoft Power</a>
+                                <a class="dropdown-item" href="microsoftazure.html">Microsoft Azure</a>
+                                <a class="dropdown-item" href="microsoftdatafundamental.html">Microsoft Data
+                                    Fundamentals</a>
+                                <a class="dropdown-item" href="microsoftInfrastructure.html">Microsoft
+                                    Infrastructure</a>
+                                <a class="dropdown-item" href="powerbi.html">power BI</a>
                             </div>
                         </li>
                         <!-- <li class="nav-item">
@@ -76,16 +78,16 @@
         </div>
     </section>
 
-    <section class="container-fluid bg-dark">
+    <section class="container-fluid" style="background-color: rgb(1,124,194);">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="mt-4 mb-4">
                         <h3 class="text-white">Contact Us</h3>
                         <ul class="header-baner">
-                            <li> <a href="#">Home</a> </li>
+                            <li> <a href="home.html">Home</a> </li> &nbsp;
                             <li> <span class="text-white"> / </span> </li>
-                            <li> <a href="#"> Contact us</a> </li>
+                            <li> <a href="contact.html"> Contact us</a> </li>
                         </ul>
                     </div>
                 </div>
@@ -98,14 +100,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="row" id="contact-form">
-
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
                             <div class="text-center mt-4 mb-4">
                                 <h6>GET IN TOUCH WITH US</h6>
                                 <h3 style="color: rgb(220, 20, 157);">LEAVE A MESSAGE</h3>
                             </div>
-                            <form class="mb-5" action="https://formsubmit.co/0d9d0d6d55b0a580b48ab488a57b4b93" method="POST" onsubmit="formValidation()">
+                            <form class="mb-5" id="form-text" action="https://formsubmit.co/0d9d0d6d55b0a580b48ab488a57b4b93" method="POST" onsubmit="formValidation()">
                                 <label for="">Your name :</label>
                                 <input type="text" class="form-control" placeholder="Enter name" required="required">
                                 <label for="">Mobile Number :</label>
@@ -138,7 +139,7 @@
                                     <h5>Address</h5>
                                     <address>
                                         <p>
-                                            1st floor, 80 Feet Rd, opposite Canara Bank,<br> MET Layout, Ashwath Nagar,
+                                            #131A, 1st floor, 80 Feet Rd, RMV 2nd stage<br> MET Layout, Ashwath Nagar,
                                             <br>Sanjaynagar,
                                             Bengaluru-94.
                                         </p>
@@ -265,29 +266,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <!-- Add custom JavaScript -->
-    <script>
-        function showDropdown() {
-            document.querySelector(".dropdown-menu").classList.add("show");
-        }
-
-        function hideDropdown() {
-            document.querySelector(".dropdown-menu").classList.remove("show");
-        }
-    </script>
+    <!-- dropdown section javascript -->
+    <script src="/js-folder/dropdown.js"></script>
 
     <!-- chatbot integration code  -->
-  <script type="text/javascript">
-    (function (d, m) {
-      var kommunicateSettings =
-        { "appId": "2f0e5b356f1971a9e9a576200fd6eda9b", "popupWidget": true, "automaticChatOpenOnNavigation": true };
-      var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-      s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-      var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-      window.kommunicate = m; m._globals = kommunicateSettings;
-    })(document, window.kommunicate || {});
-/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-  </script>
+    <script src="/js-folder/chatbot.js"></script>
   
 </body>
 
