--- a/html-folder/python.html
+++ b/html-folder/python.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Technohub</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css"
@@ -29,7 +30,6 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <title>Service</title>
     <link rel="stylesheet" href="/css-folder/courses.css">
 
 </head>
@@ -51,7 +51,7 @@
         <div class="container text-center"> <!-- Center the navigation bar -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/technohub.jpg" alt="technohub" width="100%" height="80px">
+                    <img src="/img/technohub.jpg" alt="technohub" id="technohub-logo" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,15 +73,20 @@
                                 <a class="dropdown-item" href="react.html">ReactJS</a>
                                 <a class="dropdown-item" href="nodejs.html">Node.JS</a>
                                 <a class="dropdown-item" href="angular.html">Angular.JS</a>
-                                <a class="dropdown-item" href="testing.html">Testing</a>
+                                <a class="dropdown-item" href="testing.html">Software Testing</a>
                                 <a class="dropdown-item" href="sql.html">SQL</a>
-                                <a class="dropdown-item" href="android.html">Android</a>
+                                <a class="dropdown-item" href="android.html">Android development</a>
                                 <a class="dropdown-item" href="GitHub.html">GitHub</a>
+                                <a class="dropdown-item" href="iconicHybrid.html">Iconic Hybrid</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
                                 <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
-                                <a class="dropdown-item" href="microsoft.html">Microsoft</a>
-                                <a class="dropdown-item" href="azure.html">Azure</a>
-                                <a class="dropdown-item" href="powerbi.html">power BI</a>   
+                                <a class="dropdown-item" href="microsoftpower.html">Microsoft Power</a>
+                                <a class="dropdown-item" href="microsoftazure.html">Microsoft Azure</a>
+                                <a class="dropdown-item" href="microsoftdatafundamental.html">Microsoft Data
+                                    Fundamentals</a>
+                                <a class="dropdown-item" href="microsoftInfrastructure.html">Microsoft
+                                    Infrastructure</a>
+                                <a class="dropdown-item" href="powerbi.html">power BI</a>
                             </div>
                         </li>
                         <!-- <li class="nav-item">
@@ -160,17 +165,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-7 mb-3">
-                    <h5 class="mb-3" style="font-weight: bold;">Benefits</h5>
-                    <P class="mb-5">
-                        Python course can equip you with valuable skills that are highly relevant in today's
-                        technology-driven world. Whether you are a complete beginner or an experienced programmer,
-                        learning Python can benefit you in numerous ways and give you a competitive edge in your career.
-                    </P>
-                </div>
-            </div> -->
         </div>
     </section>
 
@@ -224,8 +218,6 @@
                     <div class="why-enroll">
                         <div class="mt-2 text-center">
                             <img src="/img/box_traning_1.webp" class="mt-3" alt="box_traning_3" width="50px">
-                            <!-- <img src="/img/clients.png" alt="clipboard-check" id="clipboard"> -->
-                            <!-- <i class="fa fa-line-chart mt-3" style="font-size:36px; color:rgb(0, 132, 255);"></i> -->
                         </div>
                         <div class="why-enroll-second">
                             <p class="mt-2">
@@ -238,9 +230,7 @@
                 <div class="col-lg-4 mb-2">
                     <div class="why-enroll">
                         <div class="mt-2 text-center">
-                            <!-- <img src="/img/clients.png" alt="clipboard-check" id="clipboard"> -->
                             <img src="/img/box_traning_2.webp" class="mt-3" alt="box_traning_3" width="50px">
-                            <!-- <i class='far fa-building mt-3' style='font-size:46px; color:rgb(0, 132, 255);'></i> -->
                         </div>
                         <div class="why-enroll-second">
                             <p>
@@ -253,7 +243,6 @@
                 <div class="col-lg-4 mb-2">
                     <div class="why-enroll">
                         <div class="mt-2 text-center">
-                            <!-- <img src="/img/clients.png" alt="clipboard-check" id="clipboard"> -->
                             <img src="/img/box_traning_3.webp" class="mt-3" alt="box_traning_3" width="50px">
                         </div>
                         <div class="why-enroll-second">
@@ -275,30 +264,28 @@
                     <div class="card">
                         <p class="it-software"> IT Software Course</p>
                         <i class="fa-solid fa-building" aria-hidden="true" style='font-size:60px;color:rgb(0, 162, 255)'></i>
-                        <p class="text-center m-2" style="font-weight: 500;">Fully Hands-On IT Training</p>
+                        <p class="text-center mt-4" style="font-weight: 500;">Fully Hands-On IT Training</p>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-2">
                     <div class="card">
                         <p class="it-software"> Work on Live-Project</p>
                         <i class="fa-solid fa-desktop" aria-hidden="true" style='font-size:60px;color:rgb(0, 162, 255)'></i>
-                        <p class="text-center m-2" style="font-weight: 500;">30 to 40 Hours Live Project</p>
+                        <p class="text-center mt-4" style="font-weight: 500;">30 to 40 Hours Live Project</p>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-2">
                     <div class="card">
                         <p class="it-software"> Interview Preparation</p>
                         <i class="fa-solid fa-book-open-reader" aria-hidden="true" style='font-size:60px;color:rgb(0, 162, 255)'></i>
-                        <!-- <i class="fa fa-building" aria-hidden="true" style='font-size:60px;color:rgb(0, 162, 255)'></i> -->
-                        <p class="text-center m-2" style="font-weight: 500;">Unlimited Interview Calls</p>
+                        <p class="text-center mt-4" style="font-weight: 500;">Unlimited Interview Calls</p>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-2">
                     <div class="card">
                         <p class="it-software"> Job & Placements</p>
                         <i class="fa-solid fa-person-circle-check" aria-hidden="true" style='font-size:60px;color:rgb(0, 162, 255)'></i>
-                        <!-- <i class="fa fa-building" aria-hidden="true" style='font-size:60px;color:rgb(0, 162, 255)'></i> -->
-                        <p class="text-center m-2" style="font-weight: 500;">99% Placements</p>
+                        <p class="text-center mt-4" style="font-weight: 500;">99% Placements</p>
                     </div>
                 </div>
             </div>
@@ -418,7 +405,7 @@
                             <img src="/img/marker.svg" alt="marker">
                         </div>
                         <p>
-                            1st floor, 80 Feet Rd, opposite Canara Bank,<br> MET Layout, Ashwath Nagar, <br>Sanjaynagar,
+                            #131A, 1st floor, 80 Feet Rd, RMV 2nd stage,<br> MET Layout, Ashwath Nagar, <br>Sanjaynagar,
                             Bengaluru-94.
                         </p>
                     </div>
