--- a/searching.html
+++ b/searching.html
@@ -1,57 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Navigation Bar with Spaced Dropdown on Mouse Hover</title>
-  <!-- Add Bootstrap CSS link -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <!-- Add custom CSS -->
-  <style>
-    .navbar .dropdown:hover .dropdown-menu {
-      display: block;
-    }
-    .navbar {
-        display: flex;
-      justify-content: space-around;
-      /* padding: 10px 20px; Add some space around the navigation bar */
-    }
-  </style>
+  <title>Bootstrap Navbar Example</title>
+  <!-- Include Bootstrap CSS -->
+  <link rel="stylesheet" href="path/to/bootstrap.min.css">
 </head>
+
 <body>
+  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Brand</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav> -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Your Logo</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+  <section style="background-color: #f0f8ff;">
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="mt-4 mb-4 text-primary text-center" style="font-weight: bold;"> Why Training Courses from
+                    Technohub</h2>
+            </div>
         </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+        <div class="row">
+            <div class="col-lg-4 mb-4">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-primary" id="exampleModalLabel">
+                            <picture><img width="40" height="40" alt="Live Interactive Learning"
+                                    title="Live Interactive Learning" fullbase="true" loading="lazy"
+                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_live.webp">
+                            </picture>
+                            Live Interactive Learning
+                        </h5>
+                    </div>
+                    <div class="modal-body">
+                        <ol style="list-style-type:disc;">
+                            <li> World class Instructor</li>
+                            <li> Expert-led mentoring sessions</li>
+                            <li> Instant doubts clearing</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-4">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-primary" id="exampleModalLabel">
+                            <picture><img width="40" height="40" fullbase="true" alt="Lifetime Access"
+                                    title="Lifetime Access" loading="lazy"
+                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_life.webp"></picture>
+                            Life Time Access
+                        </h5>
+                    </div>
+                    <div class="modal-body">
+                        <ol style="list-style-type:disc;">
+                            <li> Course access never expires</li>
+                            <li> Free access to future updates</li>
+                            <li> Unlimited to course content</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-4">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-primary" id="exampleModalLabel">
+                            <picture><img width="40" height="40" alt="24x7 Support" title="24x7 Support"
+                                    fullbase="true" loading="lazy"
+                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_247.webp"></picture>
+                            Support
+                        </h5>
+                    </div>
+                    <div class="modal-body">
+                        <ol style="list-style-type:disc;">
+                            <li> one-on-one Learning Assistance</li>
+                            <li> Help desk support</li>
+                            <li> Resolve doubts in realtime</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<!-- Add Bootstrap JS and jQuery (required for dropdown functionality) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <div class="row">
+            <div class="col-lg-4 mb-4">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-primary" id="exampleModalLabel">
+                            <picture><img width="40" height="40" fullbase="true"
+                                    alt="Hands-On Project Based Learning" title="Hands-On Project Based Learning"
+                                    loading="lazy"
+                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_handson.webp">
+                            </picture>
+                            Hands-on Project Based Learning
+                        </h5>
+                    </div>
+                    <div class="modal-body">
+                        <ol style="list-style-type:disc;">
+                            <li> Industry relevent projects</li>
+                            <li> Course demo dataset & files</li>
+                            <li> Quizzes & Assignments</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-4">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-primary" id="exampleModalLabel">
+                            <picture> <img width="40" height="40" fullbase="true"
+                                    alt="Industry Recognised Certification"
+                                    title="Industry Recognised Certification" loading="lazy"
+                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_certi.webp"></picture>
+                            Industry Recognised Certification
+                        </h5>
+                    </div>
+                    <div class="modal-body">
+                        <ol style="list-style-type:disc;">
+                            <li> Technohub Training certificate</li>
+                            <li> Graded performance certificate</li>
+                            <li> Certificate of completion</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
+  <!-- Include Bootstrap JS and jQuery -->
+  <script src="path/to/jquery.min.js"></script>
+  <script src="path/to/bootstrap.min.js"></script>
 </body>
+
 </html>
